<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
     />

    <EditText
        android:id="@+id/editText"
        android:hint="@string/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_message"
       />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Temp goes here"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Max goes here"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Min goes here"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Humidity goes here"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description goes here"
        android:visibility="invisible"/>

</LinearLayout>